Your descriptive commit message

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>Sudoku Solver By Gauri Yadav</h1>
+    <div>Each row should have numbers 1-9, no repeats.</div>
+    <div>Each column should have numbers 1-9, no repeats.</div>
+    <div>Each 3x3 quadrant should have numbers 1-9, no repeats.</div>
+    <div>Give the input to each cell and click on Solve Sudoku button to get answer</div>
+    <h6></h6>
     <div id="sudoku-container">
         <table id="sudoku-board">
             <!-- Sudoku grid will be generated here -->
